maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:35: error: ':' expected but ')' found.
def isDirectionFree(dir):Boolean {
                       ^PledgeMaze:51: error: identifier expected but '}' found.
}
^